@@ -1,16 +1,21 @@
-import org.ajoberstar.grgit.Grgit
-
 // ################## plugin gradle ##################
 plugins {
 	id 'java'
 	id 'eclipse'
-	id 'org.ajoberstar.release-opinion' version '1.6.0'
+	// Removed: id 'org.ajoberstar.release-opinion' version '1.6.0' (not available in newer Gradle)
 	id 'application'
 }
 
+// ################## Java toolchain ##################
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
+
 // ################## constants ##################
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 21
+targetCompatibility = 21
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
@@ -18,10 +23,21 @@ compileTestJava.options.encoding = 'UTF-8'
 // ################## java ##################
 mainClassName='com.bee.Bee'
 
-// ################## number version  ##################
-release {
-	grgit = Grgit.open(project.file('.'))
+// ################## JVM flags for module system ##################
+// Required for JDK 9+ to access internal java.util.regex classes via reflection
+def jvmArgsForReflection = ['--add-opens', 'java.base/java.util.regex=ALL-UNNAMED']
+
+run {
+	jvmArgs = jvmArgsForReflection
 }
+
+// Apply JVM args to distribution scripts (startScripts task)
+application {
+	applicationDefaultJvmArgs = jvmArgsForReflection
+}
+
+// ################## version  ##################
+version = '2.0.0'
 
 // ################## maven ##################
 group='com.bee'
@@ -60,4 +76,16 @@ eclipse {
 // ################## common dependencies ##################
 dependencies {
 	implementation 'info.picocli:picocli:4.6.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+// ################## test configuration ##################
+test {
+	useJUnitPlatform()
+	jvmArgs = jvmArgsForReflection
+	testLogging {
+		events "passed", "skipped", "failed"
+		exceptionFormat "full"
+	}
 }
